--- a/src/css/index.css
+++ b/src/css/index.css
@@ -297,7 +297,8 @@ html{
 }
 
 .project-link img {
-    max-width: 300px;
+    width: 300px;
+    max-height: 220px;
     border-radius: 5px;
     transition: 0.8s;
 }
